--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,10 @@
 body { margin: 0; }
 .full { width:100vw; }
+
+.download { 
+  width: 100vw;
+  padding: 20px 20px;
+  background: #0078ff;
+}
+
+a { text-decoration: none; }
