--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,11 @@ body { margin: 0; }
 
 .download { 
   font-family: Futura, sans-serif;
-  font-size: 4rem;
+  font-size: 6rem;
+  color: white;
   width: 100vw;
-  padding: 40px 40px;
+  padding: 20vh 10vw;
   background: #0078ff;
 }
 
-.link a {
-  text-decoration: none;
-  color: white;
-}
+.link a { text-decoration: none; }
