--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,15 @@ body { margin: 0; }
 
 .download { 
   font-family: Futura, sans-serif;
-  font-size: 6rem;
+  font-size: 4rem;
   color: white;
   width: 100vw;
   padding: 20vh 20px;
   background: #fdda00;
 }
 
-.download a { text-decoration: none; }
+.download a { 
+  text-decoration: none;
+  font-size: 6rem;
+  color: white;
+}
