--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,11 @@ body { margin: 0; }
   background: #fdda00;
 }
 
-.download a { 
+.download a {
   text-decoration: none;
   font-size: 6rem;
   color: white;
+  padding: 0 20px;
 }
 
 .download a:hover { 
