--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body { margin: 0; }
   font-family: Futura, sans-serif;
   font-size: 4rem;
   color: white;
-  padding: 20vh 20px;
+  padding: 20vh 0;
   background: #fdda00;
 }
 
