--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body { margin: 0; }
   font-size: 4rem;
   color: white;
   padding: 20vh 0;
-  background: #fdda00;
+  background: #faff00;
 }
 
 .download a {
