--- a/css/main-min.css
+++ b/css/main-min.css
@@ -4,8 +4,10 @@ html,body{background-color:#F1EEE8;color:#3D3D3D;font-family:'PT Sans', sans-ser
   color: white;
   background-color: #FC501F;
   padding: 2vh 6vw;
-  margin-left: 2vw;
   cursor: crosshair;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .donate a{
   text-decoration: none;
